test/files/neg/implicit-any2stringadd.scala
// scalac: -Xsource:2.14 -Xlog-implicits
//
object Test {
  true + "what"
}
