test/files/neg/implicit-any2stringadd.check
implicit-any2stringadd.scala:4: error: value + is not a member of Boolean
  true + "what"
       ^
one error found
